--- a/ch12s3p4.html
+++ b/ch12s3p4.html
@@ -133,6 +133,7 @@
 
 			<!-- <h1>INSERT TRUTH TABLE</h1> -->
 			<img class="displayed" src="Images/fig12-a.png" alt="3-to-8 Decoder Truth Table">
+			
 
 			<p>
 				<span>The inputs are labeled A</span><span class="Subscript">0</span> <span>to A</span><span class="Subscript">2</span> <span>and represent the bits of a three-bit unsigned binary number. The outputs are labeled D</span><span class="Subscript">0</span> <span>through D</span><span class="Subscript">7</span> <span>. As the table shows, an input number (such as 110</span><span class="Subscript">two</span> <span>= six) results in the corresponding data line (D</span><span class="Subscript">6</span> <span>in this case) being set to “1”, with all other lines held at “0”.</span>
@@ -145,9 +146,9 @@
 			<p>
 				<span>Carefully tracing the lines in the circuit diagram, we see that all three of the inputs to the D</span><span class="Subscript">0</span> <span class="Ital">and</span> <span>gate are negated. Thus, when inputs A</span><span class="Subscript">2</span> <span>, A</span><span class="Subscript">1</span> <span>, and A</span><span class="Subscript">0</span> <span>each have a value of “0”, D</span><span class="Subscript">0</span> <span>’s three-input</span> <span class="Ital">and</span> <span>gate receives three “1’s” (</span> <span class="Ital">not</span> <span>A</span><span class="Subscript">2</span> <span>,</span> <span class="Ital">not</span> <span>A</span><span class="Subscript">1</span> <span>, and</span> <span class="Ital">not</span> <span>A</span><span class="Subscript">0</span> <span>) and generates a “1”. The result is that a “1” (high) is placed on output line zero when the number 000</span><span class="Subscript">two</span> <span>is given as input to the circuit. </span>
 			</p>
-
-			<div id="container16" class="Center">
-			<div id="tableDiv"></div></div>
+			<div id="container16">
+			<div id="tableDiv"></div>
+			</div>
 			<p class="Figure">
 				Figure 12.16: An implementation of a three-to-eight decoder
 			</p>
@@ -190,7 +191,7 @@
 				<span>How are we to deal with these “undefined” configurations when constructing the corresponding circuit? &nbsp;One way is to simply ignore the disallowed input configurations. This approach will work fine as long as we can be</span> <span class="Ital">sure</span> <span>that the illegal states can never occur.</span>
 			</p>
 
-			<div id="container17" class="Center">
+			<div id="container13">
 			<div id="tableDiv"></div></div>
 			<p class="Figure">
 				Figure 12.17: An implementation of an eight-to-three encoder
@@ -297,7 +298,7 @@
 			
 			<script>
 			var figure16 = new DigitalLogicFigure("container16", 16);
-			var figure17 = new DigitalLogicFigure("container18", 18);
+			var figure13 = new DigitalLogicFigure("container13", 13);
 			</script>
 		</div>
 	</body>
