Added image scaling to 12

--- a/ch12s3p4.html
+++ b/ch12s3p4.html
@@ -132,7 +132,7 @@
 			</p>
 
 			<!-- <h1>INSERT TRUTH TABLE</h1> -->
-			<img class="displayed" src="Images/fig12-a.png" alt="3-to-8 Decoder Truth Table">
+			<img class="Image" src="Images/fig12-a.png" alt="3-to-8 Decoder Truth Table">
 			
 
 			<p>
@@ -162,13 +162,13 @@
 			</p>
 
 			<!-- <h1>INSERT BLACK BOX</h1> -->
-			<img class="displayed" src="Images/fig12-b.png" alt="3-to-8 Decoder Black Box">
+			<img class="ImageTall" src="Images/fig12-b.png" alt="3-to-8 Decoder Black Box">
 			<p>
 				In general, since an <span class="Ital">n</span> input decoder will always have 2 <span class="Ital">n</span> outputs, its “black box” can be expressed in the following manner:
 			</p>
 
 			<!-- <h1>INSERT BLACK BOX</h1> -->
-			<img class="displayed" src="Images/fig12-c.png" alt="4-to-2 Decoder Black Box">
+			<img class="Image" src="Images/fig12-c.png" alt="4-to-2 Decoder Black Box">
 			<p>
 				The symbol <img src="Images/fig12-h.png" alt="Symbol">, along with a number or variable, is frequently used as a shorthand in circuit design to represent the indicated number of lines without actually drawing them. Since modern computers are based on 32-bit words, this compact representation is very important.
 			</p>
@@ -182,7 +182,7 @@
 			</p>
 
 			<!-- <h1>INSERT TRUTH TABLE</h1> -->
-			<img class="displayed" src="Images/fig12-d.png" alt="4-to-2 Decoder Truth Table">
+			<img class="ImageTall" src="Images/fig12-d.png" alt="4-to-2 Decoder Truth Table">
 			<p>
 				Note that twelve of the sixteen rows of the truth table are “grayed out”. These rows represent input configurations that are disallowed because either no input line is high, or multiple input lines are high. Thus, in these cases, there is no single high input line for the circuit to return the corresponding binary number of.
 			</p>
@@ -210,7 +210,7 @@
 			</p>
 
 			<!-- <h1>INSERT ALLOWED ROWS</h1> -->
-			<img class="displayed" src="Images/fig12-e.png" alt="Only Allowed Rows">
+			<img class="Image" src="Images/fig12-e.png" alt="Only Allowed Rows">
 
 			<p>
 				As you can see, this truth table is the exact inverse of the table for the three-to-eight decoder that was presented earlier.
@@ -221,12 +221,12 @@
 			</p>
 
 			<!-- <h1>INSERT BLACK BOX</h1> -->
-			<img class="displayed" src="Images/fig12-f.png" alt="8-to-3 Encoder Black Box">
+			<img class="ImageTall" src="Images/fig12-f.png" alt="8-to-3 Encoder Black Box">
 			<p>
 				<span>In general, a 2</span><span class="Superscript">n</span> <span>to</span> <span class="Ital">n</span> <span>encoder can be drawn as:</span>
 			</p>
 			<!-- <h1>INSERT CONVERTER</h1> -->
-			<img class="displayed" src="Images/fig12-g.png" alt="2n-to-n Encoder Black Box">
+			<img class="Image" src="Images/fig12-g.png" alt="2n-to-n Encoder Black Box">
 
 			<p class="Section">
 				Exercises for Section 12.3.4
