--- a/ch08s2.html
+++ b/ch08s2.html
@@ -23,7 +23,7 @@
 			<!-- Header division -->
 
 			<div id="header">
-				<a href="index.html"><h3 style="margin:0; color: white;">WATSON HOME</h3></a>
+				<a href="index.html"><h3 style="margin:0; color: white;">8.2 AN OVERVIEW OF WATSON JAVASCRIPT</h3></a>
 			</div>
 			<!-- End header -->
 
@@ -90,13 +90,33 @@
 				</table>
 
 			</div>
+			<!--Floating nav -->
+				<!-- Previous -->
+				<style>
+				div.floating-previous
+				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%;}
+				div.floating-previous a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+				</style>
+				<div class="floating-previous">
+				<a href="ch08s1.html">
+				<img style="border:0;" src="Images/left-arrow.png" alt="Previous page" width="40">
+				</a>
+				</div>
+				<!-- Next -->
+				<style>
+				div.floating-next
+				{position:fixed;z-index:200; left: auto; right:1px; top:45%;}
+				div.floating-next a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+				</style>
+				<div class="floating-next">
+				<a href="ch08s3.html">
+				<img style="border:0;" src="Images/right-arrow.png" alt="Next page" width="40">
+				</a>
+				</div>
+			<!-- End floating nav -->
 			<!-- End nav -->
 
 			<!-- Main content -->
-			<p class="Section">
-				8.2 An Overview of Watson JavaScript
-			</p>
-
 			<p>
 				The <span class="Bolded">imperative paradigm</span> is based on the idea that a program is sequence of commands or instructions that the computer is to follow to complete a task. The imperative style of programming is the oldest, and now with object-oriented extensions, continues to be far and away the most popular style of programming.
 			</p>
@@ -199,37 +219,42 @@
 			</p>
 			
 			<!-- Figure 8.2 -->
-			<p>
-				Variable Declaration
-			</p>
+			<ul>
+				<ul class="Subblockcenter">
+					<li>Variable Declaration</li>
+				</ul>
+			</ul>
 
 			<p class="Blockcenter">
 				<span class="Subfigure">var</span><span class="Italicized">name </span><span class="Subfigure">; //</span> <span class="Italicized">type</span>
 			</p>
+			<ul>
+				<ul class="Subblockcenter">
+					<li>Function Declaration</li>
+				</ul>
+			</ul>
 
-			<p>
-				Function Declaration
-			</p>
 			<ul class="Blockcenter">
-			<p>
+			<li>
 				<span class="Subfigure">function </span><span class="Italicized">name</span><span class="Subfigure">(</span><span class="Italicized">input variables</span><span class="Subfigure">) // returns </span><span class="Italicized">type</span>
-			</p>
+			</li>
 
-			<p>
+			<li>
 				<span class="Subfigure">{ </span>
-			</p>
-
-			<p>
-				&nbsp;  &nbsp; <span class="Italicized">declarations</span>
-			</p>
-
-			<p>
-				&nbsp;  &nbsp; <span class="Italicized">statements</span>
-			</p>
-
-			<p>
+			</li>
+			
+			<ul class="Subblockcenter">
+				<li>
+					<span class="Italicized">declarations</span>
+				</li>
+	
+				<li>
+					<span class="Italicized">statements</span>
+				</li>
+			</ul>
+			<li>
 				<span class="Subfigure">}</span>
-			</p>
+			</li>
 			</ul>
 			<!-- End Figure 8.2 -->
 			<p class="Figure">
@@ -271,11 +296,11 @@
 			</p>
 
 			<p>
-				<span class="T41">&nbsp;  &nbsp;  &nbsp; </span><span class="T40">Text</span><span class="T40">input:</span><span class="T40">&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="Italicized">variable</span><span class="Subfigure">= prompt(</span><span class="Italicized">message</span><span class="Subfigure">,</span><span class="Italicized">defaultValue</span><span class="Subfigure">);</span>
+				<span>&nbsp;  &nbsp;  &nbsp; </span><span>Text</span><span>input:</span><span>&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="Italicized">variable</span><span class="Subfigure">= prompt(</span><span class="Italicized">message</span><span class="Subfigure">,</span><span class="Italicized">defaultValue</span><span class="Subfigure">);</span>
 			</p>
 
 			<p>
-				<span class="T41">&nbsp;  &nbsp;  &nbsp; </span><span class="T40">Numeric</span><span class="T40">input:</span><span class="T40">&nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; </span><span class="Italicized">variable</span><span class="Subfigure">=</span><span class="Subfigure">parseFloat(</span><span class="Subfigure">prompt(</span><span class="T43">message</span><span class="Subfigure">,</span><span class="T43">defaultValue</span><span class="Subfigure">)</span><span class="Subfigure">)</span><span class="Subfigure">;</span>
+				<span>&nbsp;  &nbsp;  &nbsp; </span><span>Numeric</span><span>input:</span><span>&nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; </span><span class="Italicized">variable</span><span class="Subfigure">=</span><span class="Subfigure">parseFloat(</span><span class="Subfigure">prompt(</span><span class="T43">message</span><span class="Subfigure">,</span><span class="T43">defaultValue</span><span class="Subfigure">)</span><span class="Subfigure">)</span><span class="Subfigure">;</span>
 			</p>
 
 			<p>
@@ -290,113 +315,57 @@
 				Assignment Statement:
 			</p>
 
-			<p class="Footnote">
-				&nbsp;
-			</p>
-
-			<p>
-				&nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="Italicized">variable </span><span class="Subfigure">= </span><span class="Italicized">expression</span><span class="Subfigure">;</span>
-			</p>
-
+			<ul class="Subblockcenter"><li><span class="Italicized">variable </span><span class="Subfigure">= </span><span class="Italicized">expression</span><span class="Subfigure">;</span></li></ul>
+	
 			<p class="Bolded">
 				Selection Statements:
 			</p>
 
-			<p>
-				&nbsp;
-			</p>
+			<ul class="Subblockcenter">
+				<li><span class="Subfigure">if (</span><span class="Italicized">expression</span><span class="Italicized">relationalOperator expression</span><span class="Subfigure">)</span></li>
+				<li><span class="Subfigure">{</span></li>
+				<ul class="Subblockcenter">
+					<li><span class="Italicized">statements to be executed if expression is true</span></li>
+				</ul>
+				<li><span class="Subfigure">}</span></li>
+				<li><span class="Subfigure">else</span></li>
+				<li><span class="Subfigure">{</span></li>
+				<ul class="Subblockcenter">
+					<li><span class="Italicized">statements to be executed if expression is false</span></li>
+				</ul>
+				<li><span class="Subfigure">}</span></li>
+			</ul>
 
-			<p>
-				<span class="T22">if (</span><span class="T50">expression</span><span class="T50">relationalOperator expression</span><span class="T22">)&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  if (</span><span class="T50">expression</span><span class="T50">relationalOperator expression</span><span class="T22">)</span>
-			</p>
-
-			<p>
-				<span class="T22">{&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  {</span>
-			</p>
-
-			<p>
-				<span class="T49">&nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="T50">statements to be executed if expression is true&nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="T49">&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="T50">statements to be executed if expression is true</span>
-			</p>
-
-			<p class="Subfigure">
-				}&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  }
-			</p>
-
-			<p class="Subfigure">
-				else
-			</p>
-
-			<p class="Subfigure">
-				{
-			</p>
-
-			<p>
-				<span class="T49">&nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="T50">statements to be executed if expression is false</span>
-			</p>
-
-			<p>
-				<span class="T22">}&nbsp;  &nbsp;  &nbsp;  &nbsp;</span>
-			</p>
+			
 
 			<p class="Bolded">
 				Iteration Statements:
 			</p>
+			
+			<ul class="Subblockcenter">
+				<li>while (<span class="Italicized">variable</span><span class="Italicized">&nbsp; relationalOperator</span><span class="Italicized">&nbsp; finalValue</span>)</li>
+				<li><span class="Subfigure">{</span></li>
+				<ul class="Subblockcenter">
+					<li><span class="Italicized">statements</span></li>
+				</ul>
+				<li><span class="Subfigure">}</span></li>
+				<br />
+				<li>for (<span class="Italicized">variable</span><span class="Subfigure">=</span><span class="Italicized">initialValue</span><span class="Subfigure">; &nbsp; </span><span class="Italicized">variable</span><span class="Italicized">&nbsp; relationalOperator</span><span class="Italicized">finalValue</span><span class="Subfigure">; &nbsp; </span><span class="Italicized">&nbsp; variable</span><span class="Subfigure">++</span>)</li>
+				<li><span class="Subfigure">{</span></li>
+				<ul class="Subblockcenter">
+					<li><span class="Italicized">statements</span></li>
+				</ul>
+				<li><span class="Subfigure">}</span></li>
+			</ul>
 
-			<p class="Footnote">
-				&nbsp;
-			</p>
-
-			<p>
-				&nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="T13">while (</span><span class="T7">variable</span><span class="T7">&nbsp; relationalOperator</span><span class="T7">&nbsp; finalValue</span><span class="T13">)</span>
-			</p>
-
-			<p>
-				&nbsp;  &nbsp;  &nbsp; <span class="T13">{</span>
-			</p>
-
-			<p>
-				<span class="T3">&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="T7">statements&nbsp;  &nbsp;  &nbsp;  &nbsp;</span>
-			</p>
-
-			<p class="Subfigure">
-				&nbsp; }
-			</p>
-
-			<p class="Footnote">
-				&nbsp;
-			</p>
-
-			<p class="Footnote">
-				&nbsp;
-			</p>
-
-			<p>
-				&nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="T13">for (</span><span class="T39">variable</span><span class="Subfigure">=</span><span class="T39">initialValue</span><span class="Subfigure">; &nbsp; </span><span class="T39">variable</span><span class="T39">&nbsp; relationalOperator</span><span class="T39">finalValue</span><span class="Subfigure">; &nbsp; </span><span class="T39">&nbsp; variable</span><span class="Subfigure">++</span><span class="T13">)</span>
-			</p>
-
-			<p>
-				&nbsp;  &nbsp;  &nbsp; <span class="T13">{</span>
-			</p>
-
-			<p>
-				<span class="T3">&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; </span><span class="T7">statements&nbsp;  &nbsp;  &nbsp;  &nbsp;</span>
-			</p>
-
-			<p class="Subfigure">
-				&nbsp; }
-			</p>
 
 			<p>
 				<span class="Bolded">Function Invocation: &nbsp;  &nbsp;  &nbsp;  &nbsp; </span> &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="Bolded">Function Return:</span>
 			</p>
 
-			<p class="Footnote">
-				&nbsp;
-			</p>
-
-			<p>
-				&nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="Italicized">functionName</span><span class="Subfigure">(</span><span class="Italicized">inputs</span><span class="Subfigure">);</span>&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="Subfigure">return(</span><span class="Italicized">expression</span><span class="Subfigure">);</span>
-			</p>
+			<ul class="Subblockcenter">
+				<li><span class="Italicized">functionName</span><span class="Subfigure">(</span><span class="Italicized">inputs</span><span class="Subfigure">);</span>&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; <span class="Subfigure">return(</span><span class="Italicized">expression</span><span class="Subfigure">);</span></li>
+			</ul>
 			<p>
 				&nbsp;
 			</p>
@@ -406,6 +375,7 @@
 				Figure 8.3: The Watson JavaScript program statements.
 			</p>
 			<!-- End main content -->
+			<hr />
 			<p class="Emphasized">
 				<a href="#tippytop">Return to top</a>
 			</p>
@@ -421,15 +391,13 @@
 				</p>
 			</nav>
 
-			<div>
-
-			</div>
-
+			<!--
 			<footer>
 				<p>
 					&copy; Copyright  by Burt
 				</p>
 			</footer>
+			-->
 		</div>
 	</body>
 </html>
