Cleaned 8.4 and sorted some crazy arrow and page behavior

--- a/ch08s1.html
+++ b/ch08s1.html
@@ -94,7 +94,7 @@
 				<!-- Previous -->
 				<style>
 				div.floating-previous
-				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%;}
+				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; opacity:0.5;}
 				div.floating-previous a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 				</style>
 				<div class="floating-previous">
@@ -105,7 +105,7 @@
 				<!-- Next -->
 				<style>
 				div.floating-next
-				{position:fixed;z-index:200; left: auto; right:1px; top:45%;}
+				{position:fixed;z-index:200; left: auto; right:1px; top:45%; opacity:0.5;}
 				div.floating-next a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 				</style>
 				<div class="floating-next">
@@ -168,12 +168,13 @@
 			<div>
 
 			</div>
-
+			<!--
 			<footer>
 				<p>
 					&copy; Copyright  by Burt
 				</p>
 			</footer>
+			-->
 		</div>
 	</body>
 </html>
