--- a/ch08.html
+++ b/ch08.html
@@ -94,7 +94,7 @@
 				<!-- Next -->
 				<style>
 				div.floating-next
-				{position:fixed;z-index:200; left: auto; right:1px; top:45%;}
+				{position:fixed;z-index:200; left: auto; right:1px; top:45%; opacity:0.5;}
 				div.floating-next a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 				</style>
 				<div class="floating-next">
@@ -108,19 +108,19 @@
 			<!-- Main content -->
 			<ul>
 				<a href="ch08s1.html"><li>8.1 Introduction</li></a>
-				<a href="ch08s2.html"><li>8.2 </li></a>
-				<a href="ch08s3.html"><li>8.3 </li></a>
-				<a href="ch08s4.html"><li>8.4 </li></a> 
-				<a href="ch08s5.html"><li>8.5 </li></a>
-				<a href="ch08s5.html"><li>8.6 </li></a>
+				<a href="ch08s2.html"><li>8.2 Overview of Watson Javascript</li></a>
+				<a href="ch08s3.html"><li>8.3 Data Types, Constants, Variables</li></a>
+				<a href="ch08s4.html"><li>8.4 Input and Output Statements</li></a> 
+				<a href="ch08s5.html"><li>8.5 Expressions and Assignment</li></a>
+				<a href="ch08s5.html"><li>8.6 The Three Primary Control Constructs</li></a>
 					<ul>
-						<a href="ch08s6p1.html"><li>8.6.1 </li></a>
-						<a href="ch08s6p2.html"><li>8.6.2 </li></a>
-						<a href="ch08s6p3.html"><li>8.6.3 </li></a>
+						<a href="ch08s6p1.html"><li>8.6.1 Sequence</li></a>
+						<a href="ch08s6p2.html"><li>8.6.2 Selection</li></a>
+						<a href="ch08s6p3.html"><li>8.6.3 Repetition</li></a>
 					</ul>
-				<a href="ch08s7.html"><li>8.7 </li></a>
-				<a href="ch08s8.html"><li>8.8 </li></a>	
-				<a href="ch08s9.html"><li>8.9 </li></a>					
+				<a href="ch08s7.html"><li>8.7 Functions</li></a>
+				<a href="ch08s8.html"><li>8.8 Recursion</li></a>	
+				<a href="ch08s9.html"><li>8.9 Arrays and High-level Data Structures</li></a>					
 			</ul>
 			<!-- End main content -->
 			<hr />
@@ -142,12 +142,13 @@
 			<div>
 
 			</div>
-
+			<!--
 			<footer>
 				<p>
 					&copy; Copyright  by Burt
 				</p>
 			</footer>
+			-->
 		</div>
 	</body>
 </html>
