--- a/ch08s3.html
+++ b/ch08s3.html
@@ -119,7 +119,7 @@
 			<!-- Main content -->
 			
 			<p>
-				The kinds of values that can be expressed in a programming language are known as its <span class="Bolded">data types</span>. The Watson Graphics Language of Chapter 6 supported data types relevant to drawing graphical images, such as distance, point, circle, and color. Watson JavaScript supports only two data types: text and numbers<span class="Footnote_20_Symbol"><span class="Footnote_20_anchor" title="Footnote: Full JavaScript includes a third data type called Boolean. Additionally, the type we refer to as “text” in this chapter is generally called “string” when discussing full JavaScript, as opposed to Watson JavaScript."><a href="#ftn1" id="body_ftn1">1</a></span></span>. The <span class="Subfigure">Text</span> data type gives Watson JavaScript the ability to represent non-numeric data such as names, addresses, English phrases, etc. The <span class="Subfigure">Numeric</span> data type allows the language to manipulate numbers, both positive and negative, whole numbers and fractions.
+				The kinds of values that can be expressed in a programming language are known as its <span class="Bolded">data types</span>. The Watson Graphics Language of Chapter 6 supported data types relevant to drawing graphical images, such as distance, point, circle, and color. Watson JavaScript supports only two data types: text and numbers<span class="Footnote"><span class="Footnote_20_anchor" title="Footnote: Full JavaScript includes a third data type called Boolean. Additionally, the type we refer to as “text” in this chapter is generally called “string” when discussing full JavaScript, as opposed to Watson JavaScript."><a href="#ftn1" id="body_ftn1">1</a></span></span>. The <span class="Subfigure">Text</span> data type gives Watson JavaScript the ability to represent non-numeric data such as names, addresses, English phrases, etc. The <span class="Subfigure">Numeric</span> data type allows the language to manipulate numbers, both positive and negative, whole numbers and fractions.
 			</p>
 
 			<p>
@@ -433,6 +433,10 @@
 
 			<p class="Footnote">
 				<a href="#body_ftn1" id="ftn1">1</a>&nbsp; Full JavaScript includes a third data type called Boolean. Additionally, the type we refer to as “text” in this chapter is generally called “string” when discussing full JavaScript, as opposed to Watson JavaScript.
+			</p>
+			
+			<p class="Footnote">
+				<a href="#body_ftn2" id="ftn2">2</a>&nbsp; Within the supported range.
 			</p>
 
 			<!-- End main content -->
