--- a/ch08s5.html
+++ b/ch08s5.html
@@ -23,7 +23,7 @@
 			<!-- Header division -->
 
 			<div id="header">
-				<a href="index.html"><h3 style="margin:0; color: white;">WATSON HOME</h3></a>
+				<a href="index.html"><h3 style="margin:0; color: white;">8.5 EXPRESSIONS AND ASSIGNMENT</h3></a>
 			</div>
 			<!-- End header -->
 
@@ -90,6 +90,30 @@
 				</table>
 
 			</div>
+			<!--Floating nav -->
+				<!-- Previous -->
+				<style>
+				div.floating-previous
+				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; opacity:0.5;}
+				div.floating-previous a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+				</style>
+				<div class="floating-previous">
+				<a href="ch08s4.html">
+				<img style="border:0;" src="Images/left-arrow.png" alt="Previous page" width="40">
+				</a>
+				</div>
+				<!-- Next -->
+				<style>
+				div.floating-next
+				{position:fixed;z-index:200; left: auto; right:1px; top:45%; opacity:0.5;}
+				div.floating-next a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+				</style>
+				<div class="floating-next">
+				<a href="ch08s6.html">
+				<img style="border:0;" src="Images/right-arrow.png" alt="Next page" width="40">
+				</a>
+				</div>
+			<!-- End floating nav -->
 			<!-- End nav -->
 
 			<!-- Main content -->
@@ -101,7 +125,7 @@
 				As we have just seen, the “prompt” statements can be used to store user input into a variable. The “prompt” statements are really just specialized versions of the more general “assignment” statement.  &nbsp; Assignments take the form:
 			</p>
 
-			<p class="P60">
+			<p class="Subfigure">
 				<span class="Italicized">variable </span><span class="Subfigure">=</span> <span class="Italicized">expression</span><span class="Subfigure">;</span>
 			</p>
 
@@ -133,115 +157,7 @@
 				Y + Z
 			</p>
 
-			<table border="0" cellpadding="0" cellspacing="0" class="Table2">
-				<colgroup>
-					<col width="167"/>
-					<col width="284"/>
-					<col width="279"/>
-				</colgroup>
-
-				<tr class="Table21">
-					<td class="Table2_A1" style="text-align:left;width:1.5in;">
-					<p class="P65">
-						<span class="T48">&nbsp;  &nbsp; </span> Priority
-					</p></td>
-
-					<td class="Table2_B1" style="text-align:left;width:2.5625in;">
-					<p class="P65">
-						<span class="T48">&nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; </span> Operation
-					</p></td>
-
-					<td class="Table2_C1" style="text-align:left;width:2.5104in;">
-					<p class="P65">
-						Direction of Evaluation
-					</p></td>
-				</tr>
-
-				<tr class="Table21">
-					<td class="Table2_A2" style="text-align:left;width:1.5in;">
-					<p class="P61">
-						1 (highest priority)
-					</p></td>
-
-					<td class="Table2_B2" style="text-align:left;width:2.5625in;">
-					<p class="P61">
-						Variables &nbsp; &amp; function references
-					</p></td>
-
-					<td class="Table2_C2" style="text-align:left;width:2.5104in;">
-					<p class="P61">
-						<span class="T48">&nbsp;  &nbsp;  &nbsp; </span>left to right
-					</p></td>
-				</tr>
-
-				<tr class="Table21">
-					<td class="Table2_A3" style="text-align:left;width:1.5in;">
-					<p class="P61">
-						2
-					</p></td>
-
-					<td class="Table2_B3" style="text-align:left;width:2.5625in;">
-					<p class="P61">
-						Nested parentheses &nbsp;  &nbsp;  &nbsp;
-					</p></td>
-
-					<td class="Table2_C3" style="text-align:left;width:2.5104in;">
-					<p class="P61">
-						<span class="T48">&nbsp;  &nbsp;  &nbsp; </span>inner most to outer most
-					</p></td>
-				</tr>
-
-				<tr class="Table21">
-					<td class="Table2_A4" style="text-align:left;width:1.5in;">
-					<p class="P61">
-						3
-					</p></td>
-
-					<td class="Table2_B4" style="text-align:left;width:2.5625in;">
-					<p class="P61">
-						Non-nested parentheses
-					</p></td>
-
-					<td class="Table2_C4" style="text-align:left;width:2.5104in;">
-					<p class="P61">
-						<span class="T48">&nbsp;  &nbsp;  &nbsp; </span>left to right
-					</p></td>
-				</tr>
-
-				<tr class="Table21">
-					<td class="Table2_A5" style="text-align:left;width:1.5in;">
-					<p class="P61">
-						4
-					</p></td>
-
-					<td class="Table2_B5" style="text-align:left;width:2.5625in;">
-					<p class="P61">
-						Multiplication &amp; division
-					</p></td>
-
-					<td class="Table2_C5" style="text-align:left;width:2.5104in;">
-					<p class="P61">
-						<span class="T48">&nbsp;  &nbsp;  &nbsp; </span>left to right
-					</p></td>
-				</tr>
-
-				<tr class="Table21">
-					<td class="Table2_A6" style="text-align:left;width:1.5in;">
-					<p class="P61">
-						5 (lowest priority)
-					</p></td>
-
-					<td class="Table2_B6" style="text-align:left;width:2.5625in;">
-					<p class="P61">
-						Addition &amp; subtraction &nbsp;
-					</p></td>
-
-					<td class="Table2_C6" style="text-align:left;width:2.5104in;">
-					<p class="P61">
-						<span class="T48">&nbsp;  &nbsp;  &nbsp; </span>left to right
-					</p></td>
-				</tr>
-			</table>
+			<img src="Images/fig8-8.png" alt="Operator precedence in Watson Javascript mathematical expressions" class="Image">
 
 			<p class="Figure">
 				Figure 8.8: &nbsp; Operator precedence in Watson JavaScript mathematical expressions
@@ -253,10 +169,6 @@
 
 			<p class="Subfigure">
 				X = Y + Z;
-			</p>
-
-			<p class="Figure">
-				&nbsp;
 			</p>
 
 			<p>
@@ -385,76 +297,26 @@
 						Show what would be printed by the following program.&nbsp;
 					</p>
 				</li>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; var A; // Numeric
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; var B; // Numeric
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; var C; // Numeric
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; A = 5;
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; B = 10;
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; C = 2;
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; document.writeln ( A / B * 100 );
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; document.writeln ( A + B / C );
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;  &nbsp; document.writeln ( B * C - A );
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;
-				</p>
-
-				<p class="Subfigure">
-					&nbsp;
-				</p>
+				<ul class="Blockcenter">
+					<li><span class="Subfigure">var A; // Numeric</span></li>
+					<li><span class="Subfigure">var B; // Numeric</span></li>
+					<li><span class="Subfigure">var C; // Numeric</span></li>
+					<br />
+					<li><span class="Subfigure">A = 5;</span></li>
+					<li><span class="Subfigure">B = 10;</span></li>
+					<li><span class="Subfigure">C = 2;</span></li>
+					<br />
+					<li><span class="Subfigure">document.writeln ( A / B * 100 );</span></li>
+					<li><span class="Subfigure">document.writeln ( A + B / C );</span></li>
+					<li><span class="Subfigure">document.writeln ( B * C - A );</span></li>
+				</ul>
+				
 
 				<li>
 					<p>
 						Write a Watson JavaScript program that computes the product of three numbers entered by the user. In other words, the program should ask for and receive three integer values from a user, multiply these three numbers together, and then print the product. This program will be similar to the program of Figure 8.7 that computes the sum of two numbers.
 					</p>
 				</li>
-
-				<p>
-					&nbsp;
-				</p>
-
-				<p>
-					&nbsp;
-				</p>
-
-				<p>
-					&nbsp;
-				</p>
 
 				<li>
 					<p>
@@ -464,11 +326,19 @@
 
 				<li>
 					<p>
-						Write a Watson JavaScript program to compute the area of a rectangle given its height and width, in inches, as input. <span class="Footnote_20_Symbol"><span class="Footnote_20_anchor" title="Footnote: It is interesting to note that before the invention of spreadsheets, programmers spent much of their time writing little special purpose programs, not much more complex than those in problems 3 and 4. These programs, which generally computed tables of values based on various formulas, were used for engineering design, financial analysis, and economic modeling. Today, most of these tasks can be accomplished with general-purpose spreadsheets."><a href="#ftn3" id="body_ftn3">3</a></span></span>&nbsp;
+						Write a Watson JavaScript program to compute the area of a rectangle given its height and width, in inches, as input. <span class="Footnote_20_Symbol"><span class="Footnote" title="Footnote: It is interesting to note that before the invention of spreadsheets, programmers spent much of their time writing little special purpose programs, not much more complex than those in problems 3 and 4. These programs, which generally computed tables of values based on various formulas, were used for engineering design, financial analysis, and economic modeling. Today, most of these tasks can be accomplished with general-purpose spreadsheets."><a href="#ftn3" id="body_ftn3">3</a></span></span>&nbsp;
 					</p>
 				</li>
 			</ol>
+			<p class="Section">
+				Footnotes
+			</p>
+			<p class="Footnote">
+				<a href="#body_ftn3" id="ftn3">3</a>&nbsp; It is interesting to note that before the invention of spreadsheets, programmers spent much of their time writing little special purpose programs, not much more complex than those in problems 3 and 4. These programs, which generally computed tables of values based on various formulas, were used for engineering design, financial analysis, and economic modeling. Today, most of these tasks can be accomplished with general-purpose spreadsheets.
+			</p>
+
 			<!-- End main content -->
+			<hr />
 			<p class="Emphasized">
 				<a href="#tippytop">Return to top</a>
 			</p>
